--- a/site/mysheet.css
+++ b/site/mysheet.css
@@ -1,36 +1,40 @@
-* {
+        * {
 		box-sizing:border-box;
-		background-color: white;
 	}
     
 	h1 {
-	 text-align:center;
-	 font-family:Serif Sans-Serif;
-	 color:black;
-	 margin-bottom:25px;
-	 font-size:300%;
+	        text-align:center;
+		font-family:Serif Sans-Serif;
+		color:black;
+		margin-bottom:25px;
+		font-size:300%;
 
 	}
 
 	h2{
 		position:relative;
 		float:right;
-		padding:3px;
+		padding:5px;
 		border:1px solid black;
-		margin-right: 40px;
-		width:25%;
-		margin-top:15px;
-		font-size:150%;
+		margin-top:16px;
+		width:auto;
+		height:auto;
+		margin-right: 4.5%;
+		font-size:130%;
+		text-align:center;
 		
 	}
 	p {
 		
+		margin-left:auto;
+		margin-right:auto;
 		padding:5px;
 		color:black;
-		width:90%;
+		width:91.2%;
+		/*height:225px;*/
 		text-align:left;
-		font-family: comic sans;
+		font-family: Helvetica;
 		border:1px solid black;
 		background-color:#696969;
-		font-size:100%;		
+		font-size:100%;	
 	}
